--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,7 +60,10 @@ main {
 
 .card-gallery {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    gap: 24px;
+    padding: 16px 0;
+    flex-wrap: wrap;
 }
 
 .card {
@@ -127,3 +130,37 @@ button{
     font-size: 14px;
     margin-bottom: 16px;
 }
+
+button:hover{
+    color: white;
+    background-color: #1C73E8;
+}
+
+/* TODO: Adjust the background of the open source section */
+.open-source-section { 
+    color: #F1F1F1;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    background-color: #202124;
+    padding: 40px 0; 
+    line-height: 2rem;
+}
+
+.open-source-text a{
+    color: #CECECE;
+}
+
+.open-source-text span {
+    background-color: #EADD67CC;
+    padding: 2px 4px;
+    border-radius: 4px;
+    color: #38393F;
+}
+
+.open-source-text span:hover {
+    background-color: #38393F;
+    outline-offset: none;
+    color: #EADD67CC;
+}
+
