--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,7 +145,7 @@ button:hover{
     flex-direction: column;
     gap: 40px;
     background-color: #202124;
-    padding: 40px 0; 
+    padding: 40px 16px; 
     line-height: 2rem;
 }
 
